fixed mobile overflow

--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -11,8 +11,8 @@
 
   body{
   overflow-x: hidden; 
-  overflow: hidden;
-}
+/*  overflow: hidden;
+*/}
 
   .hamburger{
   display: block;
