--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,15 @@
 * {
   box-sizing: border-box;
-  overflow-x: hidden; 
-  overflow: hidden;
 }
 
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+
+.no_overflow {
+    overflow-x: hidden;
 }
 
 html {
